--- a/index.html
+++ b/index.html
@@ -9,17 +9,13 @@
     <link rel="stylesheet" href="./css/main-layout.css">
     <link rel="stylesheet" href="./css/navbar.css">
     <link rel="stylesheet" href="./css/categories.css">
-    <link rel="stylesheet" href="./css/products-board.css">
+    <link rel="stylesheet" href="./css/product-board.css">
 
+    <!-- JavaScript and JQuery links-->
+    <!-- <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script> -->
+    <script type="text/javascript" src="./js/main-page.js" async></script>
 
-    <!-- JavaScript and JQuery-->
-    <script src="https://code.jquery.com/jquery-3.6.0.js"
-        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="./js/app.js" async></script>
-    <!-- <script type="text/javascript" src="app.js" async></script>
-        ....
-    -->
-
+    <!-- Viewport -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
