--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <div class="pageLayout">
         <aside>
-            <section><button type="button" name="button">ahoj</button></section>
+            <section><button class="cudlik" type="button" name="button">ahoj</button></section>
             <section>2</section>
             <section>3</section>
             <section>4</section>
