--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
 
     <div class="pageLayout">
         <aside>
-            <section><button class="cudlik" type="button" name="button">ahoj</button></section>
-            <section>2</section>
-            <section>3</section>
-            <section>4</section>
-            <section>5</section>
-            <section>6</section>
+            <div class="category-option"><div class="cudlik" type="button" name="button">ahoj</div></div>
+            <div class="category-option">2</div>
+            <div class="category-option">3</div>
+            <div class="category-option">4</div>
+            <div class="category-option">5</div>
+            <div class="category-option">6</div>
         </aside>
 
         <main>
