--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <title>Eshop</title>
 
     <!-- CSS links -->
+    <link rel="stylesheet" href="./css/categories.css">
     <link rel="stylesheet" href="./css/general-styles.css">
     <link rel="stylesheet" href="./css/main-layout.css">
     <link rel="stylesheet" href="./css/navbar.css">
-    <link rel="stylesheet" href="./css/categories.css">
     <link rel="stylesheet" href="./css/product-board.css">
+    <link rel="stylesheet" href="./css/categories.css">
 
     <!-- JavaScript and JQuery links-->
     <!-- <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script> -->
@@ -37,7 +38,7 @@
 
     <div class="pageLayout">
         <aside>
-            <div class="category-option"><div class="cudlik" type="button" name="button">ahoj</div></div>
+            <div class="category-option"><div class="tlacitko">ahoj</div></div>
             <div class="category-option">2</div>
             <div class="category-option">3</div>
             <div class="category-option">4</div>
