--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <div class="pageLayout">
         <aside>
-            <section>1</section>
+            <div><button>1</button></div>
             <section>2</section>
             <section>3</section>
             <section>4</section>
