Categories button animation added

--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
     <div class="pageLayout">
         <aside>
             <div><button>1</button></div>
-            <section>2</section>
-            <section>3</section>
-            <section>4</section>
-            <section>5</section>
-            <section>6</section>
+            <div><button>2</button></div>
+            <div><button>3</button></div>
+            <div><button>4</button></div>
+            <div><button>5</button></div>
+            <div><button>6</button></div>
         </aside>
 
         <main>
