--- a/html/login.html
+++ b/html/login.html
@@ -5,8 +5,10 @@
     <title>Login</title>
 
     <!-- CSS -->
-
+    <link rel="stylesheet" href="../css/login.css">
     <!-- JS -->
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="../js/login.js" async></script>
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,6 +16,69 @@
 </head>
 
 <body>
+
+  <div class="wrapper">
+      <div class="window">
+
+        <div id="window_login">
+          <div class="header_login">
+            Login
+          </div>
+
+          <div class="input_box">
+            <h3>E-mail:</h3>
+            <div class="around_input">
+              <input type="text" name="" value="" id="login_input_mail" placeholder="Enter e-mail">
+            </div>
+          </div>
+          <div class="input_box">
+            <h3>Password:</h3>
+            <div class="around_input">
+              <input type="text" name="" value="" id="login_input_pass" placeholder="Enter e-mail">
+            </div>
+          </div>
+
+          <div class="input_box">
+          </div>
+          <div class="input_box">
+          </div>
+          <div class="login_buttons_box">
+            <button type="button" name="button">Log in</button>
+            <button type="button" name="button" id="register_btn">Register</button>
+          </div>
+
+        </div>
+
+        <div id="window_signin">
+          <div class="header_login">
+            Register
+          </div>
+
+          <div class="input_box">
+            <h3>E-mail:</h3>
+            <div class="around_input">
+              <input type="text" name="" value="" id="login_input_mail" placeholder="Enter e-mail">
+            </div>
+          </div>
+          <div class="input_box">
+            <h3>Password:</h3>
+            <div class="around_input">
+              <input type="text" name="" value="" id="login_input_pass" placeholder="Enter e-mail">
+            </div>
+          </div>
+
+          <div class="input_box">
+          </div>
+          <div class="input_box">
+          </div>
+          <div class="login_buttons_box">
+            <button type="button" name="button" >Log in</button>
+            <button type="button" name="button" >Register</button>
+          </div>
+
+        </div>
+      </div>
+  </div>
 
 </body>
 
