Dokonceni hrube casti loginpage

--- a/html/login.html
+++ b/html/login.html
@@ -33,12 +33,18 @@
             <h3>E-mail:</h3>
             <div class="around_input">
               <input type="text" name="" value="" id="login_input_mail" placeholder="Enter e-mail">
+              <div class="error" id="error_message_mail_log">
+                Incorrect input!
+              </div>
             </div>
           </div>
           <div class="input_box">
             <h3>Password:</h3>
             <div class="around_input">
               <input type="text" name="" value="" id="login_input_pass" placeholder="Enter e-mail">
+            </div>
+            <div class="error" id="error_message_pass_log">
+              Incorrect input!
             </div>
           </div>
 
@@ -48,7 +54,7 @@
           </div>
           <div class="input_box">
           </div>
-          
+
           <div class="login_buttons_box">
             <button type="button" name="button">Log in</button>
             <button type="button" name="button" id="login_to_register_btn">Sign up</button>
@@ -65,6 +71,9 @@
             <h3>First name:</h3>
             <div class="around_input">
               <input type="text" name="" value="" id="signup_input_fname" placeholder="Enter e-mail">
+              <div class="error" id="error_message_fname">
+                Incorrect input!
+              </div>
             </div>
           </div>
 
@@ -72,6 +81,9 @@
             <h3>Last name:</h3>
             <div class="around_input">
               <input type="text" name="" value="" id="signup_input_lname" placeholder="Enter e-mail">
+              <div class="error" id="error_message_lname">
+                Incorrect input!
+              </div>
             </div>
           </div>
 
@@ -79,18 +91,27 @@
             <h3>E-mail:</h3>
             <div class="around_input">
               <input type="text" name="" value="" id="signup_input_mail" placeholder="Enter e-mail">
+              <div class="error" id="error_message_mail">
+                Incorrect input!
+              </div>
             </div>
           </div>
           <div class="input_box">
             <h3>Password:</h3>
             <div class="around_input">
               <input type="text" name="" value="" id="signup_input_pass" placeholder="Enter e-mail">
+              <div class="error" id="error_message_pass">
+                Incorrect input!
+              </div>
             </div>
           </div>
           <div class="input_box">
             <h3>Confirm password:</h3>
             <div class="around_input">
               <input type="text" name="" value="" id="signup_input_confpass" placeholder="Enter e-mail">
+              <div class="error" id="error_message_passconf">
+                Incorrect input!
+              </div>
             </div>
           </div>
 
