--- a/html/cart.html
+++ b/html/cart.html
@@ -25,7 +25,7 @@
 <body>
     <nav>
         <!-- class="flex-row justify-between align-center" -->
-        <a href="">
+        <a href="../index.html">
             <h1>Eshop</h1>
         </a>
         <div>
