cart - skoro hotove mazani

--- a/html/cart.html
+++ b/html/cart.html
@@ -43,7 +43,7 @@
 
 
       <div id="table-grid">
-
+        <!--
         <div class="element">
           <button type="button" class="btn btn-trash">
               <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
@@ -207,7 +207,7 @@
             <h2 class="final_price">12,5</h2>
             <h2>&nbspCZK</h2>
           </div>
-        </div>
+        </div>-->
 
 
       </div>
