--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
     <link rel="stylesheet" href="./css/categories.css">
     <link rel="stylesheet" href="./css/product-board.css">
 
-    <!-- JavaScript and JQuery links-->
-    <script type="text/javascript" src="./js/load-sql.js" async></script>
-    <script type="text/javascript" src="./js/main-page.js" async></script>
-
     <!-- JQuery and Ajax -->
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+
+    <!-- JavaScript and JQuery links-->
+    <!--<script type="text/javascript" src="./js/load-sql.js" async></script>-->
+    <script type="text/javascript" src="./js/main-page.js" async></script>
+
+
 
     <!-- Viewport -->
     <meta charset="UTF-8">
@@ -42,12 +44,12 @@
     <div class="pageLayout">
         <aside>
             <h3>Choose a category</h3>
-            <div><button id="b1">1</button></div>
-            <div><button id="b2">2</button></div>
-            <div><button>3</button></div>
-            <div><button>4</button></div>
-            <div><button>5</button></div>
-            <div><button>6</button></div>
+            <div id="cat1"><button>1</button></div>
+            <div id="cat2"><button>2</button></div>
+            <div id="cat3"><button>3</button></div>
+            <div id="cat4"><button>4</button></div>
+            <div id="cat5"><button>5</button></div>
+            <div id="cat6"><button>6</button></div>
         </aside>
 
         <main>
