pridan vyber ceny

--- a/index.html
+++ b/index.html
@@ -53,6 +53,14 @@
         </aside>
 
         <main>
+
+            <div class="price_range_choice">
+              <h4>Minimal price:</h4>
+              <input type="text" name="" value="">
+              <h4>Minimal price:</h4>
+              <input type="text" name="" value="">
+              <button type="button" name="button" class="apply">Apply</button>
+            </div>
             <div class="header">
                 <button>Price Low to High</button>
                 <button>Price High to Low</button>
