--- a/html/login.html
+++ b/html/login.html
@@ -41,7 +41,7 @@
           <div class="input_box">
             <h3>Password:</h3>
             <div class="around_input">
-              <input type="text" name="" value="" id="login_input_pass" placeholder="Enter e-mail">
+              <input type="text" name="" value="" id="login_input_pass" placeholder="Enter password">
             </div>
             <div class="error" id="error_message_pass_log">
               Incorrect input!
@@ -70,7 +70,7 @@
           <div class="input_box">
             <h3>First name:</h3>
             <div class="around_input">
-              <input type="text" name="" value="" id="signup_input_fname" placeholder="Enter e-mail">
+              <input type="text" name="" value="" id="signup_input_fname" placeholder="Enter your first name">
               <div class="error" id="error_message_fname">
                 Incorrect input!
               </div>
@@ -80,7 +80,7 @@
           <div class="input_box">
             <h3>Last name:</h3>
             <div class="around_input">
-              <input type="text" name="" value="" id="signup_input_lname" placeholder="Enter e-mail">
+              <input type="text" name="" value="" id="signup_input_lname" placeholder="Enter your last name">
               <div class="error" id="error_message_lname">
                 Incorrect input!
               </div>
@@ -99,7 +99,7 @@
           <div class="input_box">
             <h3>Password:</h3>
             <div class="around_input">
-              <input type="text" name="" value="" id="signup_input_pass" placeholder="Enter e-mail">
+              <input type="text" name="" value="" id="signup_input_pass" placeholder="Enter password">
               <div class="error" id="error_message_pass">
                 Incorrect input!
               </div>
@@ -108,7 +108,7 @@
           <div class="input_box">
             <h3>Confirm password:</h3>
             <div class="around_input">
-              <input type="text" name="" value="" id="signup_input_confpass" placeholder="Enter e-mail">
+              <input type="text" name="" value="" id="signup_input_confpass" placeholder="Enter password">
               <div class="error" id="error_message_passconf">
                 Incorrect input!
               </div>
