sorting - not working

--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
 
         <main>
 
-            <div class="price_range_choice">
+            <div id="price_range" class="price_range_choice">
               <h4>Minimal price:</h4>
               <input type="text" name="" value="">
-              <h4>Minimal price:</h4>
+              <h4>Maximal price:</h4>
               <input type="text" name="" value="">
               <button type="button" name="button" class="apply">Apply</button>
             </div>
