--- a/html/cart.html
+++ b/html/cart.html
@@ -213,7 +213,7 @@
       </div>
 
       <div class="bottom_area">
-        <button type="button" name="button">Continue shopping</button>
+        <button type="button" name="button" id="go_back">Continue shopping</button>
         <button type="button" name="button" style="float:right">Check-out</button>
 
       </div>
